--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-771.5KB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-923.8KB/s(Youtube:不良林), server: 14.152.92.78, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-798.3KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-999.4KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇸🇬 新加坡-585.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.11MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇸🇬 新加坡-319.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇰🇷 韩国-2.30MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 未知国家-3.28MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇳 中国-342.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-348.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.196.231, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-762.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-771.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-585.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.11MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-319.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.30MB/s(Youtube:不良林)
+      - 未知国家-3.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-342.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
