--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.63MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-798.3KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-772.4KB/s(Youtube:不良林), server: 14.152.92.79, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 中国-898.9KB/s(Youtube:不良林), server: 14.152.92.78, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-348.5KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.26MB/s(Youtube:不良林), server: 134.195.196.231, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-762.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇳🇱 荷兰-331.5KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-2.05MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-849.3KB/s(Youtube:不良林), server: 42.157.195.241, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-901.9KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-550.8KB/s(Youtube:不良林), server: 42.157.195.229, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.246, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 匈牙利-835.2KB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: us-03.licom.ml, port: 8443, type: trojan, password: a45be70d-abf2-4069-804e-e79ef87ad610, sni: us-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.43MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-666.8KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-754.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-5.66MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-798.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-772.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-348.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-762.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-331.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-849.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 匈牙利-835.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.43MB/s(Youtube:不良林)
+      - 🇮🇳 印度-666.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-754.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
